base/app-z2m.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m
spec:
  tls:
  - secretName: z2m-certs
    hosts:
    - z2m.kotimme.cc
  rules:
  - host: z2m.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: z2m
            port:
              name: z2m
---
apiVersion: v1
kind: Service
metadata:
    name: z2m
spec:
    ports:
      - name: z2m
        port: 80
        targetPort: z2m
    selector:
        app: z2m
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: z2m
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2m
  serviceName: "z2m"
  template:
    metadata:
      labels:
        app: z2m
    spec:
      securityContext:
#        runAsUser: 1978
#        runAsGroup: 1978
        fsGroup: 1978
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: devices
                operator: In
                values:
                - zigbee-coordinator
      imagePullSecrets:
      - name: docker-hub
      nodeSelector:
        devices: zigbee-coordinator
      containers:
      - name: z2m
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - name: z2m
          containerPort: 8080
        volumeMounts:
        - name: dir
          mountPath: /app/data
          subPath: z2m
        - name: udev
          mountPath: /run/udev
          readOnly: true
        - name: usb
          mountPath: /dev/ttyUSB0
      volumes:
      - name: dir
        persistentVolumeClaim:
         claimName: nfs
      - name: udev
        hostPath:
          path: /run/udev
      - name: usb
        hostPath:
          path: /dev/ttyUSB0
